--- a/index.html
+++ b/index.html
@@ -11,54 +11,40 @@
   <title>Frontend Mentor | Single Price Grid Component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px;
-      margin-top: 40px; 
-      text-align: center;
-      color: hsl(0, 0%, 6%); }
-    .attribution a { color: hsl(0, 0%, 6%); 
-    text-decoration: none;}
-  </style>
 </head>
 <body>
-  <div class="whole-doc">
-    <div class="header">
-      <div class = header-text>
-        <h1>Join our community</h1>
-        <h6> <span>30-day, hassle-free money back guarantee</span> <br>
-        Gain access to our full library of tutorials along with expert code reviews. <br>
-        Perfect for any developers who are serious about honing their skills.</h6>
-      </div>
+  <div class="header">
+    <div class = "header-text">
+      <h1>Join our community</h1>
+      <h6> <span>30-day, hassle-free money back guarantee</span> <br>
+      Gain access to our full library of tutorials along with expert code reviews. <br>
+      Perfect for any developers who are serious about honing their skills.</h6>
     </div>
-    <div class="main">
-      <div class="main-left">
-        <div class="text-left">
-          <h3> Monthly Subscription</h3>
-          <p> <span>&dollar;29</span> <sup>per month</sup></p>
-          <p>Full access for less than &dollar;1 a day</p>
-        </div>
-        <button>Sign Up</button>
-      </div>
-      <div class="main-right">
-        <div class="text-right">
-          <h3>Why Us</h3>
-          <p>Tutorials by industry experts <br>
-            Peer &amp; expert code review <br>
-            Coding exercises <br>
-            Access to our GitHub repos <br>
-            Community forum <br>
-            Flashcard decks <br>
-            New videos every week<br>
-          </p>
-      </div>
-      </div>
+  </div>
+  <div class="top-mid">
+    <div class="inner-top-mid">
+      <h3> Monthly Subscription</h3>
+      <p> <span>&dollar;29</span> <sup>per month</sup></p>
+      <p>Full access for less than &dollar;1 a day</p>
     </div>
-</div>
-<footer>
+    <button>Sign Up</button>
+  </div>
+  <div class="bottom-mid">
+      <h3>Why Us</h3>
+      <p>Tutorials by industry experts <br>
+        Peer &amp; expert code review <br>
+        Coding exercises <br>
+        Access to our GitHub repos <br>
+        Community forum <br>
+        Flashcard decks <br>
+        New videos every week<br>
+      </p>
+  </div>
+
   <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/Fedozie" target="_blank">Edozie Onyeanusi</a>.
   </p>
-</footer>
+
 </body>
 </html>
