Created a additional signup page and pushed it to finbarr

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p> <span>&dollar;29</span> <sup>per month</sup></p>
       <p>Full access for less than &dollar;1 a day</p>
     </div>
-    <button>Sign Up</button>
+    <button><a href="signup.html">Sign Up</a></button>
   </div>
   <div class="bottom-mid">
       <h3>Why Us</h3>
@@ -40,10 +40,9 @@
         New videos every week<br>
       </p>
   </div>
-
   <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://github.com/Fedozie" target="_blank">Edozie Onyeanusi</a>.
+      Coded by <a href="https://github.com/Fedozie" target="_blank">Edozie Onyeanusi 🇳🇬</a>.
   </p>
 
 </body>
